--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.56.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
@@ -41,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.0.8",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
