santi4246/Back-deployed-database

--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,6 @@
-DATABASE=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-KEY=
-DATABASE_URL=
+DATABASE=railway
+DB_USER=postgres
+DB_PASSWORD=nyuf1rTih7P2yNdxIk1u
+DB_HOST=containers-us-west-82.railway.app
+PGPORT=7679
+DATABASE_URL=postgresql://postgres:nyuf1rTih7P2yNdxIk1u@containers-us-west-82.railway.app:7679/railway
