--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,6 @@
 DATABASE=railway
 DB_USER=postgres
-DB_PASSWORD=nyuf1rTih7P2yNdxIk1u
-DB_HOST=containers-us-west-82.railway.app
-PGPORT=7679
-DATABASE_URL=postgresql://postgres:nyuf1rTih7P2yNdxIk1u@containers-us-west-82.railway.app:7679/railway
+DB_PASSWORD=jT9rfeIXIhjmdI5VHBgs
+DB_HOST=containers-us-west-119.railway.app
+PGPORT=6793
+DATABASE_URL=postgresql://postgres:jT9rfeIXIhjmdI5VHBgs@containers-us-west-119.railway.app:6793/railway
