--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "nodemon": "^2.0.20",
     "react": "^17.0.2",
