--- a/api/.env
+++ b/api/.env
@@ -4,3 +4,7 @@ DB_PASSWORD=jT9rfeIXIhjmdI5VHBgs
 DB_HOST=containers-us-west-119.railway.app
 PGPORT=6793
 DATABASE_URL=postgresql://postgres:jT9rfeIXIhjmdI5VHBgs@containers-us-west-119.railway.app:6793/railway
+ISSUER_BASE_URL=https://dev-vboay6tb438sz61l.us.auth0.com/
+CLIENT_ID=4f3Y9pvee1t65733W4Z07zYFd8EOjcp9
+BASE_URL=http://localhost:3001/admin
+SECRET=e8ZN1IDJFeEcF5QjsmTNlNwzu-g3ocj8BWbvhLeE_AA5dYqCULjlv-iztdls-gr5
