Implementacion-mp-back

--- a/api/.env
+++ b/api/.env
@@ -8,3 +8,4 @@ ISSUER_BASE_URL=https://dev-vboay6tb438sz61l.us.auth0.com/
 CLIENT_ID=4f3Y9pvee1t65733W4Z07zYFd8EOjcp9
 BASE_URL=http://localhost:3001/admin
 SECRET=e8ZN1IDJFeEcF5QjsmTNlNwzu-g3ocj8BWbvhLeE_AA5dYqCULjlv-iztdls-gr5
+ACCESS_TOKEN=APP_USR-7441694204927535-111217-d5f85a93de04f2f896d103f6ce38eb36-1237667434 
