--- a/api/package.json
+++ b/api/package.json
@@ -15,12 +15,13 @@
   },
   "dependencies": {
     "axios": "^1.1.2",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openid-connect": "^2.10.0",
+    "mercadopago": "^1.5.14",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
