--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.1.2",
     "body-parser": "^1.20.1",
+    "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
