--- a/api/.env
+++ b/api/.env
@@ -14,3 +14,6 @@ ACCESS_TOKEN=APP_USR-7441694204927535-111217-d5f85a93de04f2f896d103f6ce38eb36-12
 CLOUD_NAME=dqyjclfow
 CLOUD_KEY=832758575712718
 CLOUD_KEY_SECRET=7tEwaFefhYQTq6acEH0B9OoxH5w
+
+MYMARKET_USERNAME='mymarketpg@gmail.com'
+MYMARKET_PASS='intlmhqhdtmebytz'
