--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "express-openid-connect": "^2.10.0",
     "mercadopago": "^1.5.14",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
     "uuidv4": "^6.2.13"
